--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;500;700&family=Manrope:wght@800&family=Markazi+Text:wght@400;500;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
+    <meta name="title" content="Little Lemon Restaurant">
     <meta
       name="description"
       content="Little Lemon is a family owned Mediterranean restaurant, based on Chicago."
@@ -19,7 +20,7 @@
           content="Little Lemon is a family owned Mediterranean restaurant, focused on traditional recipes served with a modern twist"
     />
     <meta name="og:image" 
-          content="%PUBLIC_URL%/Logo .png"
+          content="%PUBLIC_URL%/New_Logo_resize"
     />
     <!-- <script src="https://raw.githubusercontent.com/Meta-Front-End-Developer-PC/capstone/master/api.js"></script> -->
     <!--
@@ -36,7 +37,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Little Lemon</title>
+    <title>Little Lemon Restaurant</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
