--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
           content="Little Lemon is a family owned Mediterranean restaurant, focused on traditional recipes served with a modern twist"
     />
     <meta name="og:image" 
-          content="%PUBLIC_URL%/New_Logo_resize"
+          content="%PUBLIC_URL%/New_Logo_resize.png"
     />
     <!-- <script src="https://raw.githubusercontent.com/Meta-Front-End-Developer-PC/capstone/master/api.js"></script> -->
     <!--
